[package]
name = "minesweeper"
version = "0.1.0"
authors = ["Marcus Xu <xumarcus.sg@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
num = "0.4"
rand = "0.8"
simple_logger = "1"
thiserror = "1.0"