[package]
name = "minesweeper"
version = "0.1.0"
authors = ["Marcus Xu <xumarcus.sg@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrayvec = "0.7.1"
bitvec = "0.22.3"
itertools = "0.10.1"
log = "0.4"
noisy_float = "0.2"
probability = "0.17.0"
rand = "0.8"
simple_logger = "1"
smallvec = "1.6.1"
strum = "0.21.0"
strum_macros = "0.21.1"
thiserror = "1.0"
